# deduplicate

./: .coverage  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: multi_hashing_demo.ipynb  multi_hashing_demo_output.ipynb
src/deduplicate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deduplicate/core/: duplicate_detection_algorihtm.py  duplicate_detection_algorithm.py  plugin_registry.py  tolerance_calculator.py
src/deduplicate/plugins/duplicate_detection_algorithms/: distance_matrix.py  multi_hashing.py
src/deduplicate/plugins/tolerance_calculators/: natural_tolerance_plateau_probe.py  perturbed_dataset_reclustering.py
src/deduplicate_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deduplicate_lib/core/: duplicate_detection_algorithm.py  plugin_registry.py  tolerance_calculator.py
src/deduplicate_lib/plugins/duplicate_detection_algorithms/: distance_matrix.py  multi_hashing.py
src/deduplicate_lib/plugins/tolerance_calculators/: natural_tolerance_plateau_probe.py  perturbed_dataset_reclustering.py
src/deduplicate_lib/utils/: array_manager.py
tests/: .coverage  conftest.py  test_duplicate_detection_algorithm.py  test_registry.py
tests/core/: test_registry.py  test_tolerance_calculator.py
tests/integration/: test_example_notebook.py  test_tol_find_and_deduplicate.py
tests/plugins/duplicate_detection_algoirthms/: test_distance_matrix.py
tests/plugins/tolerance_calculators/: test_natural_tolerance_plateau_probe.py  test_perturbed_dataset_reclustering.py
tests/unit/core/: test_duplicate_detection_algorithm.py  test_registry.py  test_tolerance_calculator.py
tests/unit/plugins/duplicate_detection_algoirthms/: test_distance_matrix.py  test_multi_hashing.py
(+2 files in other folders)
