[project]
name = "deduplicate_lib"
dynamic = ["version"]
description = "A Python package for deduplicating data."
authors = [
    { name="Julian Holland", email="holland@fhi.mpg.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "numba",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "deduplicate_lib.__version__"}

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "coverage", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"